build/log/idf_py_stdout_output_9058
[1/11] Building C object esp-idf/i2c_master_init_config/CMakeFiles/__idf_i2c_master_init_config.dir/i2c_master_init_config.c.obj
FAILED: esp-idf/i2c_master_init_config/CMakeFiles/__idf_i2c_master_init_config.dir/i2c_master_init_config.c.obj 
/home/acg/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.2.5\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/acg/Programming/Drone/build/config -I/home/acg/Programming/Drone/components/i2c_master_init_config/include -I/home/acg/esp/esp-idf/components/newlib/platform_include -I/home/acg/esp/esp-idf/components/freertos/config/include -I/home/acg/esp/esp-idf/components/freertos/config/include/freertos -I/home/acg/esp/esp-idf/components/freertos/config/xtensa/include -I/home/acg/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/acg/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/acg/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/acg/esp/esp-idf/components/freertos/esp_additions/include -I/home/acg/esp/esp-idf/components/esp_hw_support/include -I/home/acg/esp/esp-idf/components/esp_hw_support/include/soc -I/home/acg/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/acg/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/acg/esp/esp-idf/components/heap/include -I/home/acg/esp/esp-idf/components/log/include -I/home/acg/esp/esp-idf/components/soc/include -I/home/acg/esp/esp-idf/components/soc/esp32 -I/home/acg/esp/esp-idf/components/soc/esp32/include -I/home/acg/esp/esp-idf/components/hal/platform_port/include -I/home/acg/esp/esp-idf/components/hal/esp32/include -I/home/acg/esp/esp-idf/components/hal/include -I/home/acg/esp/esp-idf/components/esp_rom/include -I/home/acg/esp/esp-idf/components/esp_rom/include/esp32 -I/home/acg/esp/esp-idf/components/esp_rom/esp32 -I/home/acg/esp/esp-idf/components/esp_common/include -I/home/acg/esp/esp-idf/components/esp_system/include -I/home/acg/esp/esp-idf/components/esp_system/port/soc -I/home/acg/esp/esp-idf/components/esp_system/port/include/private -I/home/acg/esp/esp-idf/components/xtensa/esp32/include -I/home/acg/esp/esp-idf/components/xtensa/include -I/home/acg/esp/esp-idf/components/xtensa/deprecated_include -I/home/acg/esp/esp-idf/components/driver/include -I/home/acg/esp/esp-idf/components/driver/deprecated -I/home/acg/esp/esp-idf/components/driver/analog_comparator/include -I/home/acg/esp/esp-idf/components/driver/dac/include -I/home/acg/esp/esp-idf/components/driver/gpio/include -I/home/acg/esp/esp-idf/components/driver/gptimer/include -I/home/acg/esp/esp-idf/components/driver/i2c/include -I/home/acg/esp/esp-idf/components/driver/i2s/include -I/home/acg/esp/esp-idf/components/driver/ledc/include -I/home/acg/esp/esp-idf/components/driver/mcpwm/include -I/home/acg/esp/esp-idf/components/driver/parlio/include -I/home/acg/esp/esp-idf/components/driver/pcnt/include -I/home/acg/esp/esp-idf/components/driver/rmt/include -I/home/acg/esp/esp-idf/components/driver/sdio_slave/include -I/home/acg/esp/esp-idf/components/driver/sdmmc/include -I/home/acg/esp/esp-idf/components/driver/sigma_delta/include -I/home/acg/esp/esp-idf/components/driver/spi/include -I/home/acg/esp/esp-idf/components/driver/temperature_sensor/include -I/home/acg/esp/esp-idf/components/driver/touch_sensor/include -I/home/acg/esp/esp-idf/components/driver/twai/include -I/home/acg/esp/esp-idf/components/driver/uart/include -I/home/acg/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/acg/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/acg/esp/esp-idf/components/esp_pm/include -I/home/acg/esp/esp-idf/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/acg/Programming/Drone=. -fmacro-prefix-map=/home/acg/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/i2c_master_init_config/CMakeFiles/__idf_i2c_master_init_config.dir/i2c_master_init_config.c.obj -MF esp-idf/i2c_master_init_config/CMakeFiles/__idf_i2c_master_init_config.dir/i2c_master_init_config.c.obj.d -o esp-idf/i2c_master_init_config/CMakeFiles/__idf_i2c_master_init_config.dir/i2c_master_init_config.c.obj -c /home/acg/Programming/Drone/components/i2c_master_init_config/i2c_master_init_config.c
/home/acg/Programming/Drone/components/i2c_master_init_config/i2c_master_init_config.c:12:9: error: expected ';', ',' or ')' before 'i2c_master_bus_handle_t'
   12 |         i2c_master_bus_handle_t *ret_handle)
      |         ^~~~~~~~~~~~~~~~~~~~~~~
/home/acg/Programming/Drone/components/i2c_master_init_config/i2c_master_init_config.c: In function 'i2c_device_config':
/home/acg/Programming/Drone/components/i2c_master_init_config/i2c_master_init_config.c:38:5: error: statement with no effect [-Werror=unused-value]
   38 |     i2c_device_config config = {
      |     ^~~~~~~~~~~~~~~~~
/home/acg/Programming/Drone/components/i2c_master_init_config/i2c_master_init_config.c:38:22: error: expected ';' before 'config'
   38 |     i2c_device_config config = {
      |                      ^~~~~~~
      |                      ;
In file included from /home/acg/esp/esp-idf/components/driver/i2c/include/driver/i2c_master.h:10,
                 from /home/acg/Programming/Drone/components/i2c_master_init_config/include/i2c_master_init_config.h:4,
                 from /home/acg/Programming/Drone/components/i2c_master_init_config/i2c_master_init_config.c:1:
/home/acg/Programming/Drone/components/i2c_master_init_config/i2c_master_init_config.c:45:60: error: 'config' undeclared (first use in this function)
   45 |     ESP_ERROR_CHECK(i2c_master_bus_add_device(bus_handle, &config, ret_handle));
      |                                                            ^~~~~~
/home/acg/esp/esp-idf/components/esp_common/include/esp_err.h:117:30: note: in definition of macro 'ESP_ERROR_CHECK'
  117 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
/home/acg/Programming/Drone/components/i2c_master_init_config/i2c_master_init_config.c:45:60: note: each undeclared identifier is reported only once for each function it appears in
   45 |     ESP_ERROR_CHECK(i2c_master_bus_add_device(bus_handle, &config, ret_handle));
      |                                                            ^~~~~~
/home/acg/esp/esp-idf/components/esp_common/include/esp_err.h:117:30: note: in definition of macro 'ESP_ERROR_CHECK'
  117 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
/home/acg/Programming/Drone/components/i2c_master_init_config/i2c_master_init_config.c:47:1: error: 'enumerator' undeclared (first use in this function)
   47 | enumerator}
      | ^~~~~~~~~~
/home/acg/Programming/Drone/components/i2c_master_init_config/i2c_master_init_config.c:47:11: error: expected ';' before '}' token
   47 | enumerator}
      |           ^
      |           ;
cc1: some warnings being treated as errors
[2/11] Performing build step for 'bootloader'
[1/1] cd /home/acg/Programming/Drone/build/bootloader/esp-idf/esptool_py && /home/acg/.espressif/python_env/idf5.2_py3.12_env/bin/python /home/acg/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/acg/Programming/Drone/build/bootloader/bootloader.bin
Bootloader binary size 0x68b0 bytes. 0x750 bytes (7%) free.
ninja: build stopped: subcommand failed.
